--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Dominik Moritz
-email: domoritz@cmu.edu
+title: John Cobb
+email: jcobb2@math.wisc.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Research Scientist at Apple. To be assistant professor at Carnegie Mellon University. I create interactive data visualization and analysis tools. PhD from University of Washington.
+  Second year PhD Student at UW Madison.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.domoritz.de" # the base hostname & protocol for your site
-production_url: "https://www.domoritz.de"
-github_username: domoritz
+url: "https://jdcobb.github.io" # the base hostname & protocol for your site
+production_url: "https://jdcobb.github.io"
+github_username: jdcobb
 permalink: /blog/:year/:month/:title.html
 
 twitter:
-  username: domoritz
+  username: cobbjd3
 
 sass:
   style: compressed
