--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,2 @@
-- message: "I have begun my first year in the Mathematics PhD program at [UW Madision](https://www.math.wisc.edu/)"
+- message: "I have begun my first year in the Mathematics PhD program at [UW Madison](https://www.math.wisc.edu/)"
   date: 2020-09-04
