--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ email: jcobb2@math.wisc.edu
 description: > # this means to ignore newlines until "baseurl:"
   Second year PhD Student at UW Madison.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jdcobb.github.io" # the base hostname & protocol for your site
-production_url: "https://jdcobb.github.io"
-github_username: jdcobb
+url: "https://johndcobb.github.io" # the base hostname & protocol for your site
+production_url: "https://johndcobb.github.io"
+github_username: johndcobb
 permalink: /blog/:year/:month/:title.html
 
 twitter:
