--- a/_data/people.yml
+++ b/_data/people.yml
@@ -5,3 +5,6 @@ John Cobb:
 David Boucher:
   url: "http://boucherds.people.cofc.edu/index.html"
 
+Alex Kasman:
+  url: "http://kasmana.people.cofc.edu/"
+
