--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -72,6 +72,7 @@
   doi: 1911.04861
   pdf: https://arxiv.org/pdf/1911.04861.pdf
   link: https://arxiv.org/abs/1911.04861
+  highlight: true
   tags:
     - Integrable Systems
     - Mathematical Physics
