--- a/_data/people.yml
+++ b/_data/people.yml
@@ -3,7 +3,7 @@ John Cobb:
   me: true
 
 David Boucher:
-  url: "http://boucherds.people.cofc.edu/index.html"
+  url: "http://boucherds.people.cofc.edu/index.htm"
 
 Alex Kasman:
   url: "http://kasmana.people.cofc.edu/"
