--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,4 @@
 - message: "I have begun my first year in the Mathematics PhD program at [UW Madison](https://www.math.wisc.edu/)"
   date: 2020-09-04
+- message: "The College Today published [an article](https://today.cofc.edu/2018/07/30/math-research/) on the Quaternionic Soliton project."
+  date: 2018-07-30
