Fill in old news.

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,8 @@
 - message: "I have begun my first year in the Mathematics PhD program at [UW Madison](https://www.math.wisc.edu/)"
   date: 2020-09-04
+- message: "The College Today published [an article](https://today.cofc.edu/2019/05/02/scott-ward-award-for-excellence-in-mathematical-studies/) on the Scott Ward Award."
+  date: 2019-05-02
 - message: "The College Today published [an article](https://today.cofc.edu/2018/07/30/math-research/) on the Quaternionic Soliton project."
   date: 2018-07-30
+- message: "I won a [Goldwater Scholarship](https://today.cofc.edu/2017/04/07/goldwater-scholars-chemistry-cofc/)."
+  date: 2017-08-2017
