--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -33,7 +33,7 @@
   date: 2017-08-25
   slides: /talks/Rankability_Poster.pptx
 - title: "Investigating Rankability Using Distributed Graph Analytic Frameworks"
-  location: [Tresata](https://tresata.com/)
+  location: Tresata
   city: Charlotte, NC
   date: 2017-08-15
 - title: "Singular Value Decomposition and Digital Image Processing"
