--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,4 @@
-- message: "I have begun my first year in the Mathematics PhD program at [UW Madison](https://www.math.wisc.edu/)"
+- message: "I have begun my first year in the Mathematics PhD program at [UW Madison](https://www.math.wisc.edu/)."
   date: 2020-09-04
 - message: "The College Today published [an article](https://today.cofc.edu/2019/05/02/scott-ward-award-for-excellence-in-mathematical-studies/) on the Scott Ward Award."
   date: 2019-05-02
