--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -31,7 +31,7 @@
   location: College of Charleston Celebration of Scholars
   city: Charleston, SC
   date: 2017-08-25
-  slides: /talks/Rankability_Poster.pptx
+  slides: /talks/rankability_poster.pdf
 - title: "Investigating Rankability Using Distributed Graph Analytic Frameworks"
   location: Tresata
   city: Charlotte, NC
@@ -52,7 +52,7 @@
   location: CofC Department of Chemistry and Biochemistry Colloquium
   city: Charleston, SC
   date: 2016-08-15
-  slides: /talks/Cobb_Poster.pptx
+  slides: /talks/Cobb_Poster.pdf
 - title: "Growth of P3HT-PCBM Nanostructures at Solvent-Solvent Interfaces"
   location: College of Charleston Celebration of Scholars
   city: Charleston, SC
