--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,7 +2,7 @@
   date: 2020-09-04
 - message: "The College Today published [an article](https://today.cofc.edu/2019/05/02/scott-ward-award-for-excellence-in-mathematical-studies/) on the Scott Ward Award."
   date: 2019-05-02
-- message: "I won a [DoD NDSEG Graduate Fellowship](https://ndseg.sysplus.com/NDSEG/About/)."
+- message: "I won a [DoD NDSEG Fellowship](https://ndseg.sysplus.com/NDSEG/About/)."
   date: 2019-05-15
 - message: "The College Today published [an article](https://today.cofc.edu/2018/07/30/math-research/) on the Quaternionic Soliton project."
   date: 2018-07-30
