--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -48,7 +48,7 @@
   venue_url: https://www.tandfonline.com/toc/tnmp20/current
   doi: 10.1080/14029251.2020.1757234
   short_doi: 10/dtqz
-  venue-tags:
+  venue_tags:
      - J. Nonlinear Math. Phys.
   pdf: https://arxiv.org/pdf/1911.04861.pdf
   arxiv: "1911.04861"
