--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,22 +1,14 @@
-- university: University of Washington
+- university: University of Wisconsin-Madison
+  years: 2019-
+  degree: Ph.D. in Mathematics
+  location: Madison, WI
+  description: 
+- university: Honors College of Charleston
   years: 2015-2019
-  degree: Ph.D. in Computer Science & Engineering
-  location: Seattle, WA
+  degree: B.S. Mathematics | B.A. Chemistry | Minor Data Science
+  location: Charleston, SC
   description:
-    - Advised by **Jeffrey Heer** and **Bill Howe**.
-    - "Thesis: \"Interactive Systems for Scalable Visualization & Analysis\"."
-    - Member of the Interactive Data Lab and Database Group.
-- university: University of Washington
-  years: 2013-2015
-  degree: M.S. in Computer Science & Engineering
-  location: Seattle, WA
-  description:
-    - Advised by **Bill Howe** and **Jeffrey Heer**.
-- university: Hasso Plattner Institute
-  years: 2010-2013
-  degree: B.S. in IT-Systems Engineering
-  location: Potsdam, Germany
-  description:
-    - "Thesis: \"Algorithms for the Visualization of Software System Evolution\"."
-    - "GPA: 4.0 (1.0 in German system), highest distinction, rank 1/74"
-    - Advanced classes on database implementation, computational geometry, architecture, and logic.
+    - "Thesis: \"Quaternion-Valued KdV Solutions\". Advised by Alex Kasman."
+    - Awarded over 5 departmental scholarships over the first three years.
+    - Goldwater Scholar in 2017 for research in modeling the morphology of semiconducting polymers.
+    - NDSEG Fellowship in 2019 for research on spectral graph theory and ranking algorithms.
