--- a/_data/positions.yml
+++ b/_data/positions.yml
@@ -1,145 +1,31 @@
-- title: Assistant Professor
-  years: 2020-
-  company: Carnegie Mellon University
-  location: Pittsburgh, PA
-  description: In the Fall of 2020, I will start as an assistant professor in the Human-Computer-Interaction Institute.
-- title: Research Scientist
-  years: 2020-
-  company: Apple
-  location: Pittsburgh, PA
-  skills:
-    - Machine Learning
-- title: Research Scientist
-  years: 2019-2020
-  company: Apple
-  location: Seattle, WA
-  skills:
-    - Machine Learning
-- title: Researcher
-  years: 2019
-  company: Streamlit
-  location: San Fracisco, CA
-  skills:
-    - Machine Learning
-    - Python
-- title: Research Assistant
-  years: 2013-2019
-  company: University of Washington
-  location: Seattle, WA
+- title: Student Researcher
+  years: Mar 2018-May 2019
+  company: College of Charleston
+  group: Department of Mathematics
+  location: Charleston, SC
   mentors:
-    - Jeffrey Heer
-    - Bill Howe
-- title: Research Intern
-  years: 2017
-  company: Microsoft Research
-  group: HCI
-  location: Redmond, WA
+    - Alex Kasman
+  description: "Conduct research of noncommutative soliton solutions to the nonabelian n-KdV hierarchy and KP hierarchy focusing on quaternion-valued solutions to the KdV equation."
+- title: Student Researcher
+  years: Dec 2016-May 2019
+  company: Institute on Graph Analytics and Research in Data Science
+  location: Charleston, SC
   mentors:
-    - Danyel Fisher
-  description: In collaboration with the PowerBI team, we developed visualization alternatives that scale to large numbers of records. So far, we have submitted a paper and a patent on part of this project but there is more to come. As a side project, I worked on visualization recommendation using constraints.
-  skills:
-    - Scalable Visualization
-    - PowerBI
-    - Visualization Recommendation
-- title: Research Intern
-  years: 2016
-  company: Microsoft Research
-  group: VIBE/HCI and DMX
-  location: Redmond, WA
-  mentors:
-    - Danyel Fisher
-    - Bolin Ding
-    - Chi Wang
-  description: Developed and user tested a UI for an approximate query processing system. Published a CHI paper, two workshop papers, and [filed](https://patents.google.com/patent/US20180260451A1) [three](https://patents.google.com/patent/US20180260985A1) [patents](https://patents.google.com/patent/US20180260450A1).
-  project: Pangloss
-  skills:
-    - Approximate Query Processing
-    - Visualization
-    - UX
-- title: Research Intern
-  years: 2015
-  company: Google Research
-  group: Structured Data Team
-  location: Mountain View, CA
-  mentors:
-    - Sudip Roy
-    - Alon Halevy
-    - Alkis Polyzotis
-    - Natasha Noy
-    - Xiao Yu
-    - Chris Olston
-    - Sitaram Iyer
-  description: Improved the user experience of an internal search engine and designed a summarization algorithm for search results. Also worked with the Knowledge Graph team on exploring a new graph infrastructure that enables integrated applications.
-  project: DataSearch
-  skills:
-    - UX
-    - Algorithm design
-    - Large-scale systems
-    - Angular
-    - C++
-- title: Engineering Intern
-  years: 2014
-  company: Google
-  location: New York City, NY
-  mentors:
-    - Ben Atkins
-    - Shishi Chen
-    - John Banning
-  description: Developed new algorithms to support complex queries in large-scale production monitoring system.
-  project: Monarch
-  skills:
-    - Algorithm design
-    - Large-scale software development
-    - Profiling
-    - C++
-- title: Intern and Developer
-  years: 2012-2013
-  company: Open Knowledge Foundation
-  location: London and Berlin
-  mentors:
-    - David Raznick
-    - Rufus Pollock
-    - Adrià Mercader
-    - Sean Hammond
-    - Stefan Wehrmeyer
-  description: Two-month summer internship and subsequent one-year involvement in development and training for [CKAN](https://ckan.org/), the most deployed open data portal in the world. I developed the [new data store](https://docs.ckan.org/en/latest/maintaining/datastore.html), a [plugin API for CKAN](https://docs.ckan.org/en/latest/maintaining/data-viewer.html), and a [service to automatically ingest data](https://github.com/ckan/datapusher). I also consulted state governments on open data strategies.
-  project: CKAN
-  skills:
-    - Distributed teams
-    - Agile development
-    - Large legacy systems
-    - Python
-    - JavaScript
-- title: Bachelor's Project
-  years: 2012-2013
-  company: Hasso Plattner Institute
-  location: Potsdam
-  description: In a team of four students developed a tool to visualize software evolution with 3D Voronoi Treemaps. I focused on the theory and implementation of layout algorithms.
-  skills:
-    - Legacy code
-    - Visualization
-    - Complex algorithms
-    - C++
-- title: Undergraduate Research Assistant
-  years: 2012-2013
-  company: University of Potsdam
-  group: Knowledge Representation and Reasoning Group
-  location: Potsdam
-  mentors:
-    - Benjamin Kaufmann
-    - Torsten Schaub
-    - Martin Gebser
-  description: Worked on theory and implementation of an extension of the Clasp Answer Set Programming solver for pseudo-boolean constraints.
-  project: Clasp Answer Set Solver
-  skills:
-    - Research
-    - Benchmarking
-    - Logic programs
-    - C++
-- title: Google Summer of Code
-  years: 2012
-  location: Remote
-  description: Extend open data platform for information about people.
-  skills:
-    - Open source development
-    - JavaScript
+    - Paul Anderson
+    - Amy Langville
+  description: "Worked with a team dedicated to pursuing fundamental problems in data science. Designed algorithms to calculate suspected indicators of how ”rankable” a dataset is by virtue of its spectral properties. Created scalable approximative solutions that work across distributed systems. Invited by Dr. Tim Chartier of Davidson College to present at Tresata, a big data predictive analytics company based in Charlotte."
+- title: Summer Data Analyst
+  years: Jul 2017-Aug 2017
+  company: Tresata
+  location: Charlotte, NC
+  mentors: 
+    - Tim Chartier
+  description: "Invited by Chief Analyst Dr. Tim Chartier to represent IGARDS and design efficiently stored graph theory algorithms for the rankability project. Involved rewriting prospective rankability measures to fit the memory partitioning schemes of computer clusters, with the ultimate goal of speeding up the computation of large ranking problems."
+- title: Student Researcher & Mentor
+  years: Sep 2015-Aug 2017
+  company: College of Charleston 
+  group: Chemistry & Biochemistry Department
+  location: Charleston, SC
+  mentors: 
+    - Dave Boucher
+  description: "Conduct research that focuses on: solubility parameter theory, polymer assembly in the liquid phase, morphology of polymer films, synthesis of polymer-nanopartical composites using in-situ methods for the design of organic optoelectronics. Participant in HHMI Grant supporting my work as a mentor."
