--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -1,7 +1,7 @@
 - title: Geometry of Schemes
   type: Reading Group
   url: "geometryofschemes"
-  paper: https://www.maths.ed.ac.uk/~v1ranick/papers/eisenbudharris.pdf
+  book: https://www.maths.ed.ac.uk/~v1ranick/papers/eisenbudharris.pdf
   image: geometryofschemes.jpg
   description: "Geometry of Schemes is a textbook by David Eisenbud and Joe Harris. This page organizes the Summer 2020 reading schedule."
   highlight: 1
