--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -9,4 +9,4 @@
   type: Service
   url: "https://sites.google.com/site/uwmadisondrp/"
   image: drp.jpg
-  description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project. The goal of this program is to get students excited about mathematics by giving them an out-of-the-classroom experience, usually in topics that are outside of their coursework."
+  description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project."
