Add MATH221 and feature it

--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,20 +1,36 @@
 - title: "MATH 229: Vector Calculus with Chemical Applications"
+  image: 6-armyresearch.jpg
+  type: Past
   role: Teaching Assistant
   year: Fall 2017
   location: College of Charleston
   description: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
+  image: 6-armyresearch.jpg
+  type: Past
   role: Teaching Assistant
   year: Spring 2018
   location: College of Charleston
   description: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
+  image: 6-armyresearch.jpg
+  type: Past
   role: Teaching Assistant
   year: Fall 2018
   location: College of Charleston
   description: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
+  image: 6-armyresearch.jpg
+  type: Past
   role: Teaching Assistant
   year: Spring 2019
   location: College of Charleston
   description: Presented new content and held problem sessions.
+- title: "MATH 221: Calculus and Analytic Geometry I"
+  type: Current
+  role: Teaching Assistant
+  year: Fall 2020
+  location: University of Wisconsin-Madison
+  url: "/teaching/221Fall2020"
+  image: calculus1.jpg
+  highlight: 1
