--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -6,6 +6,7 @@
   description: "Geometry of Schemes is a textbook by David Eisenbud and Joe Harris. This page organizes the Summer 2020 reading schedule."
 - title: Directed Reading Program
   type: Service
-  url: "https://sites.google.com/site/uwmadisondrp/"
+  url: "https://www.math.wisc.edu/~drp/"
   image: drp.jpg
   description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project."
+  highlight: 2
