--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -27,6 +27,7 @@
   location: College of Charleston
   description: Presented new content and held problem sessions.
 - title: "MATH 221: Calculus and Analytic Geometry I"
+  sections: 429, 431
   type: Current
   role: Teaching Assistant
   year: Fall 2020
