CV now collates teaching experience

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -8,3 +8,5 @@ David Boucher:
 Alex Kasman:
   url: "http://kasmana.people.cofc.edu/"
 
+Gabriele Meyer:
+  url: "https://www.math.wisc.edu/~meyer/"
