--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -4,29 +4,31 @@
   role: Teaching Assistant
   year: Fall 2017
   location: College of Charleston
-  description: Presented new content and held problem sessions.
+  roledescription: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
   year: Spring 2018
   location: College of Charleston
-  description: Presented new content and held problem sessions.
+  roledescription: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
   year: Fall 2018
   location: College of Charleston
-  description: Presented new content and held problem sessions.
+  roledescription: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
   year: Spring 2019
   location: College of Charleston
-  description: This course is aimed at students preparing for a course in physical chemistry. It combines topics from Calculus I-III, linear algebra, and group theory to explain things like symmetries in molecules and crystal structures. 
+  roledescription: Presented new content and held problem sessions.
+  description: This course is aimed at students preparing for a course in physical chemistry. It combines topics from Calculus I-III, linear algebra, and group theory to explain things like symmetries in molecules and crystal structures.
 - title: "MATH 221: Calculus and Analytic Geometry I"
+  professor: Gabriele Meyer 
   sections: 429, 431
   type: Current
   role: Teaching Assistant
@@ -35,4 +37,5 @@
   url: "/teaching/221Fall2020"
   image: calculus1.jpg
   description: This page organizes calculus discussion sections 429 and 431 running in Fall 2020.
+  roledescription: Hold weekly problem solving sessions.
   highlight: 1
