--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@
 version: 2
 updates:
   - package-ecosystem: "bundler" # See documentation for possible values
-    directory: "/Gemfile" # Location of package manifests
+    directory: "/Gemfile.lock" # Location of package manifests
     schedule:
       interval: "daily"
