--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,9 +1,41 @@
+- title: Geometry of Schemes Reading Group
+  at: UW Madison
+  url: https://johndcobb.github.io/organization/geometryofschemes/
+  location: Madison, WI
+  years: Summer 2020
+  description: "Organizer, Book: Geometry of Schemes by Eisenbud and Harris."
 - title: Member of Organizing Team
   at: UW Madison Directed Reading Program 
   url: https://sites.google.com/site/uwmadisondrp/
   location: Madison, WI
   years: Fall 2019-
   description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project. The goal of this program is to get students excited about mathematics by giving them an out-of-the-classroom experience, usually in topics that are outside of their coursework."
+- title: Volunteer
+  at: AMS Fall Central Sectional
+  years: Sep 2019
+  location: Madison, WI
+  description: "Signed in attendees to the 3-day AMS Fall central sectional meeting."
+- title: Student Ambassador
+  at: College of Charleston School of Sciences and Mathematics
+  years: Sep 2018-May 2019
+  location: Charleston, SC
+  description: Select group of 9 students who have demonstrated outstanding academic achievement and exemplar student leadership. Represent the School of Sciences and Mathematics at College of Charleston to incoming students and other interest groups
+- title: Student Vice President & Webmaster
+  at: Phi Kappa Phi
+  years: Apr 2017-May 2019
+  location: Charleston, SC
+  description: Met with board to coordinate volunteer opportunities and promote education throughout the College of Charleston campus. Helped organize events on campus for Phi Kappa Phi members. Managed the College of Charleston Chapter Phi Kappa Phi Website.
+- title: Volunteer
+  at: AMS Spring Southeastern Sectional Meeting
+  years: Mar 2017
+  location: Charleston, SC
+  description: "Signed in attendees to the 3-day AMS Spring southeastern sectional meeting."
+- title: Volunteer
+  at: College of Charleston Math Meet
+  years: 2016-2018
+  url: https://mathmeet.cofc.edu/
+  location: Charleston, SC
+  description: "Volunteered to oversee various parts of the planned activities including judging timed sprints and signing students in."
 - title: Volunteer Tutor
   at: Trident Literacy Association
   years: Oct 2015-Oct 2016
@@ -16,30 +48,4 @@
   url: https://cancerchase5k.racesonline.com/
   location: Fort Mill, SC
   description: "Helped direct the founding of The Cancer Chase, whose first project began an annual 5k run benefiting Carolinas HealthCare System’s Levine Cancer Institute. Rallied support from local businesses to raise over $15,000 annually."
-- title: Volunteer
-  at: College of Charleston Math Meet
-  years: 2016-2018
-  url: https://mathmeet.cofc.edu/
-  location: Charleston, SC
-  description: "Volunteered to oversee various parts of the planned activities including judging timed sprints and signing students in."
-- title: Volunteer
-  at: AMS Spring Southeastern Sectional Meeting
-  years: Mar 2017
-  location: Charleston, SC
-  description: "Signed in attendees to the 3-day AMS Spring southeastern sectional meeting."
-- title: Volunteer
-  at: AMS Fall Central Sectional
-  years: Sep 2019
-  location: Madison, WI
-  description: "Signed in attendees to the 3-day AMS Fall central sectional meeting."
-- title: Student Vice President & Webmaster
-  at: Phi Kappa Phi
-  years: Apr 2017-May 2019
-  location: Charleston, SC
-  description: Met with board to coordinate volunteer opportunities and promote education throughout the College of Charleston campus. Helped organize events on campus for Phi Kappa Phi members. Managed the College of Charleston Chapter Phi Kappa Phi Website.
-- title: Student Ambassador
-  at: College of Charleston School of Sciences and Mathematics
-  years: Sep 2018-May 2019
-  location: Charleston, SC
-  description: Select group of 9 students who have demonstrated outstanding academic achievement and exemplar student leadership. Represent the School of Sciences and Mathematics at College of Charleston to incoming students and other interest groups
   
