minor cv changes

--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,4 +1,5 @@
 - title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
@@ -6,6 +7,7 @@
   location: College of Charleston
   roledescription: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
@@ -13,6 +15,7 @@
   location: College of Charleston
   roledescription: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
@@ -20,6 +23,7 @@
   location: College of Charleston
   roledescription: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
@@ -27,7 +31,16 @@
   location: College of Charleston
   roledescription: Presented new content and held problem sessions.
   description: This course is aimed at students preparing for a course in physical chemistry. It combines topics from Calculus I-III, linear algebra, and group theory to explain things like symmetries in molecules and crystal structures.
+- title: "MATH 295: Introduction to Advanced Mathematics"
+  panel: false
+  type: Past
+  role: Grader
+  year: Spring 2019
+  location: College of Charleston
+  roledescription: Graded homework assignments and tests for this introductory proof class.
+  description: The primary aim of this course is to develop the ideas of rigor and proof in mathematics through the study of topics in discrete mathematics.
 - title: "MATH 221: Calculus and Analytic Geometry I"
+  panel: true
   professor: Gabriele Meyer 
   sections: 429, 431
   type: Current
