fix award statements

--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -2,17 +2,17 @@
   years: 2019
   sponsor: Air Force Office of Scientific Research
   sponsor_url: https://www.ndsegfellowships.org/2019-awardees
-  description: The National Defense Science and Engineering Graduate (NDSEG) Fellowship is a highly competitive, portable fellowship that is awarded to U.S. citizens and nationals who intend to pursue a doctoral degree in one of fifteen supported disciplines. NDSEG confers high honors upon its recipients, and allows them to attend whichever U.S. institution they choose. The NDSEG Fellowship lasts for 3 years and pays for full tuition and all mandatory fees; a monthly stipend ($38,400 annually); a $5,000 travel budget over the Fellow’s tenure for professional development; and up to $1,200 a year in health insurance.
+  description: The National Defense Science and Engineering Graduate (NDSEG) Fellowship is a highly competitive, portable fellowship that is awarded to ~120 U.S. citizens and nationals who intend to pursue a doctoral degree in one of fifteen supported disciplines annually. NDSEG confers high honors upon its recipients, and allows them to attend whichever U.S. institution they choose. The NDSEG Fellowship lasts for 3 years and pays for full tuition and all mandatory fees; a monthly stipend ($38,400 annually); a $5,000 travel budget over the Fellow’s tenure for professional development; and up to $1,200 a year in health insurance.
 - name: Phi Kappa Phi Fellowship
   years: 2019
   sponsor: Phi Kappa Phi
   sponsor_url: https://www.PhiKappaPhi.org/Fellowship
-  description: The Honor Society of Phi Kappa Phi currently awards fifty Fellowships of $8,500 each, six at $20,000 each, and two at $35,000 each to members entering the first year of graduate or professional study. Each active Phi Kappa Phi chapter may select one candidate from among its local applicants to compete for the Society-wide awards.
+  description: The Honor Society of Phi Kappa Phi awarded fifty Fellowships of $8,500 each to members entering the first year of graduate or professional study. Each active Phi Kappa Phi chapter may select one candidate from among its local applicants to compete for the Society-wide awards.
 - name: Ewa Wojcicka Mathematics Award
   years: 2019
   sponsor: Mathematics Department, College of Charleston
   sponsor_url: http://blogs.cofc.edu/math/2019/05/07/congratulations-to-math-department-student-award-recipients/
-  description: The Ewa Wojcicka Award is our departments top award, given in memory of Professor Wojcicka to a recipient showing exceptional ability, creativity and potential in mathematics.
+  description: The Ewa Wojcicka Award is the College of Charlestons math departments top award, given in memory of Professor Wojcicka to a recipient showing exceptional ability, creativity and potential in mathematics.
 - name: ACS Outstanding Student in Computational Chemistry
   years: 2019
   sponsor: American Chemical Society
@@ -36,7 +36,7 @@
   sponsor: Mathematics Department, College of Charleston
   sponsor_url: http://blogs.cofc.edu/math/2018/07/12/congratulations-to-2018-departmental-undergraduate-award-recipients/
   article: https://today.cofc.edu/2019/05/02/scott-ward-award-for-excellence-in-mathematical-studies/
-  description: Given to one student annually by the mathematics department.
+  description: Given to one student annually by the College of Charleston mathematics department.
 - name: Brewer Scholarship
   years: 2018
   sponsor: Chemistry Department, College of Charleston
