--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,13 +1,13 @@
-- title: "Gröbner Complex of a Homogenous Ideal of a Polynomial Ring."
+- title: "Gröbner Complex of a Homogenous Ideal of a Polynomial Ring"
   location: UW Madison Graduate Algebraic Geometry Seminar
   city: Madison, WI
   url: https://www.math.wisc.edu/wiki/index.php/Graduate_Algebraic_Geometry_Seminar
   notes: /talks/GrobnerComplex.pdf
   date: 2020-05-29
-- title: "Quaternion-Valued Solutions to the KdV"
-  location: JMM Quaternion Special Session
+- title: "Breather Soliton Interactions for the Quaternionic KdV Equation"
+  location: AMS Contributed Paper Session on Partial Differential Equations, I
   city: Baltimore, MD
-  url: https://jointmathematicsmeetings.org/amsmtgs/2217_abstracts/1145-35-453.pdf
+  url: http://jointmathematicsmeetings.org/amsmtgs/2217_abstracts/1145-35-453.pdf
   date: 2019-01-16
 - title: "Quaternion-Valued Solutions to the KdV"
   location: JMM Undergraduate Poster Session
