--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,10 +1,16 @@
+- title: Mentor
+  at:  First Generation Student Success
+  url: https://firstgensuwmadison.wixsite.com/fgss
+  location: Madison, WI
+  years: Fall 2020-
+  description: "FGSS is a student organization dedicated to helping students locate resources, connect with peers and faculty, and support them along their college journey. FGSS links first-generation college students to first generation graduate and faculty mentors for monthly meetings. "
 - title: Geometry of Schemes Reading Group
   at: UW Madison
   url: https://johndcobb.github.io/organization/geometryofschemes/
   location: Madison, WI
   years: Summer 2020
   description: "Organizer, Book: Geometry of Schemes by Eisenbud and Harris."
-- title: Member of Organizing Team
+- title: Organizer
   at: UW Madison Directed Reading Program 
   url: https://sites.google.com/site/uwmadisondrp/
   location: Madison, WI
