--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,8 @@
+- title: "Introduction to Boij-S\"oderberg Theory"
+  location: UW Madison Graduate Algebraic Geometry Seminar
+  city: Madison, WI
+  url: https://www.math.wisc.edu/wiki/index.php/Graduate_Algebraic_Geometry_Seminar
+  date: 2020-11-11
 - title: "Gröbner Complex of a Homogenous Ideal of a Polynomial Ring"
   location: UW Madison Graduate Algebraic Geometry Seminar
   city: Madison, WI
