Public service fellows

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,3 +1,9 @@
+- title: Public Service Fellow
+  at: University of Wisconsin-Madison
+  url: https://wiscience.wisc.edu/program/public-service-fellows
+  location: Madison, WI
+  years: Jan 2021 - Jan 2022
+  description: The 2021 cohort had 3 people in the social entrepreneurship pathway. Over the course of a year, fellows engage in a practicum working directly with a community partner on a chosen project focused on issues of public concern.
 - title: Mentor
   at:  First Generation Student Success
   url: https://firstgensuwmadison.wixsite.com/fgss
