ams student travel grant

--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,3 +1,7 @@
+- name: AMS Graduate Student Travel Grant
+  years: 2020
+  sponsor: University of Wisconsin-Madison
+  description: These grants are available to all Graduate Level (Masters, and PhD) students in the Mathematical Sciences. The grant will cover the JMM registration fee at the Graduate Student rate.
 - name: Summer Research Grant
   years: 2018
   sponsor: College of Charleston School of Science and Math
