--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- message: "A beer featuring art about algebraic geometry research is now being sold in Madison. [Check it out.](https://casp.wisc.edu/delta-beer-lab-competition/)"
+  date: 2021-05-14
 - message: "I began my first year in the Mathematics PhD program at [UW Madison](https://www.math.wisc.edu/)."
   date: 2020-09-04
 - message: "The College Today published [an article](https://today.cofc.edu/2019/05/02/scott-ward-award-for-excellence-in-mathematical-studies/) on the Scott Ward Award."
