--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: John Cobb
 email: jcobb2@math.wisc.edu
 description: > # this means to ignore newlines until "baseurl:"
-  The academic website of John Cobb, a PhD Student in mathematics at the University of Wisconsin-Madison in his second year. 
+  The academic website of John Cobb, a PhD Student in mathematics at the University of Wisconsin-Madison. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://johndcobb.github.io" # the base hostname & protocol for your site
 production_url: "https://johndcobb.github.io"
