--- a/_data/extracurricular.yml
+++ b/_data/extracurricular.yml
@@ -1,7 +1,7 @@
 - title: Startup Competition
   at: CS NEST
-  years: Sep 2020-
-  description: "CS NEST is a program and competition hosted by nationally ranked startup accelerator gener8tor. They provide support to a team and myself to work on the development of arxiva, a free community resource for making research on arxiv more accessible."
+  years: Sep 2020-Apr 2021
+  description: "CS NEST is a program and competition hosted by nationally ranked startup accelerator gener8tor. They provide support to a team and myself to work on the development of arxiva, a free community resource for making research on arxiv more accessible. Arxiva won the 2021 Transcend UW startup competition for early stage projects."
 - title: Student Leader
   at: College of Charleston Higdon Leadership Cohort
   years: Sep 2018-May 2019
