--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -51,3 +51,14 @@
   image: calculus1.jpg
   description: This page organizes calculus discussion sections 429 and 431 running in Fall 2020.
   roledescription: Hold weekly problem solving sessions.
+- title: "MATH 221: Calculus and Analytic Geometry I"
+  panel: true
+  professor: Alex Waldron
+  type: Current
+  role: Teaching Assistant
+  year: Fall 2021
+  location: University of Wisconsin-Madison
+  url:"/teaching/221Fall2021"
+  image: calculus1.jpg
+  description: This page organizes calculus discussion sections running in Fall 2021.
+  roledescription: Hold weekly problem solving sessions.
