--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -60,7 +60,7 @@
   description: The Scholarship Program honoring Senator Barry Goldwater was designed to foster and encourage outstanding students to pursue careers in the fields of mathematics, the natural sciences, and engineering. The Goldwater Scholarship is the premier undergraduate award of its type in these fields. The Goldwater Scholars were selected based on academic merit from a field of 1,286 natural sciences, mathematics, and engineering students nominated by the campus representatives from among 2,000 colleges and universities nationwide. Trustees awarded 240 scholarships for the 2017-2018 academic year to undergraduate sophomores and juniors from the United States.
 - name: Top 10%, Virginia Tech Regional Mathematics Contest
   years: 2017
-  sponsor: Mathematics Department, Virginia Tech Regional Mathematics Contest
+  sponsor: Mathematics Department, Virginia Tech
   sponsor_url: https://intranet.math.vt.edu/people/plinnell/Vtregional/
   description: 95 schools from 30 states took part in the 39th contest and there were 739 participants.
 - name: ATD Scholarship in Mathematics
