add new paper in progress

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -10,3 +10,6 @@ Alex Kasman:
 
 Gabriele Meyer:
   url: "https://www.math.wisc.edu/~meyer/"
+
+Caitlyn Booms:
+  url: "https://sites.google.com/wisc.edu/cbooms"
