fix links to people

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -13,3 +13,12 @@ Gabriele Meyer:
 
 Caitlyn Booms:
   url: "https://sites.google.com/wisc.edu/cbooms"
+
+Amy Langville:
+  url: "http://langvillea.people.cofc.edu"
+
+Paul Anderson:
+  url: "https://anderson-data-science.com/people/"
+
+Tim Chartier:
+  url: "https://www.davidson.edu/people/tim-chartier"
