--- a/_data/positions.yml
+++ b/_data/positions.yml
@@ -27,5 +27,5 @@
   group: Chemistry & Biochemistry Department
   location: Charleston, SC
   mentors: 
-    - Dave Boucher
+    - David Boucher
   description: "Conduct research that focuses on: solubility parameter theory, polymer assembly in the liquid phase, morphology of polymer films, synthesis of polymer-nanopartical composites using in-situ methods for the design of organic optoelectronics. Participant in HHMI Grant supporting my work as a mentor."
