Journal>in progress

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -71,7 +71,7 @@
     - Integrable Systems
     - Mathematical Physics
   type:
-    - Journal
+    - In Progress
     
 - id: P3HT
   title: "Aggregate Dispersions to Enhance the Intrachain Order in Surfactant-Stabilized Aqueous Colloids of Poly(3-hexylthiophene)"
