--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,7 @@
+- title: CA+ Conference
+  where: University of Minnesota
+  start: 2021-10-30
+  end: 2021-10-30
 - title: WARTHOG 2020 (Infinite-dimensional methods in commutative algebra)
   where: University of Oregon
   start: 2020-07-27
