AMS Fall central meeting

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -2,6 +2,10 @@
   where: University of Minnesota
   start: 2021-10-30
   end: 2021-10-30
+- title: AMS Fall Central Sectional Meeting
+  where: Virtual
+  start: 2021-10-09
+  end: 2021-10-10
 - title: WARTHOG 2020 (Infinite-dimensional methods in commutative algebra)
   where: University of Oregon
   start: 2020-07-27
